# task-manager

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
src/task_manager/: __init__.py  claude_integration.py  cli.py  commands.py  config.py  date_parser.py  formatters.py  logger.py  models.py  queries.py  storage.py  validation.py
src/task_manager/tui/: __init__.py  app.py
src/task_manager/tui/screens/: __init__.py  action_dialog.py  create_task_screen.py  edit_notes_screen.py  edit_task_screen.py  project_management_screen.py  search_screen.py
src/task_manager/tui/widgets/: __init__.py
